rules.v4
#
#
# example rules.v4 config
#
#
# Generated by iptables-save v1.8.9 (nf_tables) on Sat May 10 21:58:57 2025
#
# default accept all, you can block default if it whitelist first config then allow which country you decide to pass
#
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

# loopback accept
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

# general allow / accept config
-A INPUT -s 103.150.253.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 103.150.253.0/24 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 103.150.253.0/24 -p tcp -m tcp --dport 3342 -j ACCEPT

# pass already connected connection
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# limiter (optional)
-A INPUT -p udp -m udp --dport 53 -m hashlimit --hashlimit-upto 83/min --hashlimit-burst 100 --hashlimit-mode srcip --hashlimit-name dns_limit -j ACCEPT

# port drop
-A INPUT -p tcp -m tcp --dport 3342 -j DROP
-A INPUT -p tcp -m tcp --dport 80 -j DROP
-A INPUT -p udp -m udp --dport 53 -j DROP

# general ipset droplist / acceptlist rules
# add accordingly as you needed the ipset rules
# e.g. :  -A INPUT -m set --match-set <your added ipset hashlist> src -j <DROP | REJECT | ACCEPT | ANY>
#
-A INPUT -m set --match-set country_hk src -j DROP
-A INPUT -m set --match-set country_ru src -j DROP
-A INPUT -m set --match-set country_cn src -j DROP
-A INPUT -m set --match-set country_pl src -j DROP
-A INPUT -m set --match-set cta_cryptowall src -j DROP
-A INPUT -m set --match-set spamhaus_drop src -j DROP
-A INPUT -m set --match-set spamhaus_edrop src -j DROP

-A OUTPUT -m set --match-set country_hk dst -j DROP
-A OUTPUT -m set --match-set country_ru dst -j DROP
-A OUTPUT -m set --match-set country_cn dst -j DROP
-A OUTPUT -m set --match-set country_pl dst -j DROP
-A OUTPUT -m set --match-set cta_cryptowall dst -j DROP
-A OUTPUT -m set --match-set spamhaus_drop dst -j DROP
-A OUTPUT -m set --match-set spamhaus_edrop dst -j DROP

# logging to journalctl -f
-A INPUT -p tcp -j LOG --log-prefix "Rejecting TCP " --log-level 7 --log-tcp-sequence --log-tcp-options --log-ip-options --log-uid
-A INPUT -p udp -j LOG --log-prefix "Rejecting UDP " --log-level 7 --log-ip-options --log-uid

COMMIT
# Completed on Sat May 10 21:58:57 2025
